# pschecker

./: .gitignore  README.md  README.rst  setup.cfg
pschecker/: __init__.py  cli.py  helpers.py  pschecker.py
pschecker/checks/: __init__.py  domain_names.py  fail.py  firewall.py  host_listening.py  last_update.py  root_password.py  success.py  warning.py
