[metadata]
name = pschecker
description = A tool to check the state of your personal server security
version = attr: pschecker.__version__
long_description = file: README.rst
keywords = server, personal, security, self-hosting
license = GNU Library or Lesser General Public License (LGPL)
license_file = LICENSE
author = Gelnior
author_email = gelnior@free.fr
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
packages = find:
install_requires =
    requests
    click

[options.packages.find]
include = pschecker*

[options.extras_require]
dev =
    wheel

test =
    pytest
    pytest-cov
    requests_mock


[options.entry_points]
console_scripts =
    pschecker = pschecker.pschecker:pschecker
